# friday

./: .env.example  .gitignore  .gitmodules  .rumdl.toml  AGENTS.md  CLAUDE.md  README.md  TODO.md  debug_db.py  main.py  pyproject.toml  ty.toml  typecheck_results.txt  typescript
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
app/: app.py  cli.py  style.tcss  tui.py
app/agent/: agents.py  knowledge.py  memory.py  queue.py  tools.py
app/components/: chat.py  modals.py
data/: friday.db
docs/: plan-v1.md  plan-v2.md
src/friday/: __init__.py  __main__.py
src/friday/agent/: context.py  core.py  deps.py  modes.py  router.py  run_stats.py
src/friday/agent/prompts/: code.md  debug.md  reader.md  router.md  writer.md
src/friday/app/: CHAT_COMPONENTS.md  main.py  style.tcss  tui.py
src/friday/app/components/: chat.py
src/friday/bus/: broker.py  schemas.py  topics.py
src/friday/cli/: app.py  ask.py  chat.py  completer.py  confirm.py  models.py  output.py  picker.py  theme.py
src/friday/core/: agent_runtime.py  llm.py  policy.py  scheduler.py  scheduling.py  settings.py  state.py
src/friday/core/prompts/: system.md  tool_instructions.md
src/friday/domain/: models.py  permissions.py  validation.py
src/friday/infra/: config.py  mcp.py  sessions.py
src/friday/mcp/: __init__.py  client.py  config.py
src/friday/shell/: friday.plugin.zsh
src/friday/storage/: db.py  state_store.py
src/friday/storage/migrations/: 0001_init.sql
src/friday/storage/repos/: artifacts.py  conversations.py  memory.py  notes.py  tasks.py  tool_logs.py
src/friday/tools/: filesystem.py  gateway.py  registry.py  shell.py
src/friday/tools/local/: __init__.py  fs_ops.py  notes.py  screenshot.py  tasks.py  web_search.py
src/friday/utils/: jsonschema.py  redact.py  time.py
src/friday/voice/: audio.py  controller.py  ptt.py  realtime.py  stt.py  tts.py  vad.py
tests/: conftest.py  test_agent_logic.py  test_ask.py  test_chat_integration.py  test_chat_widgets.py  test_cli.py  test_fs_ops.py  test_models.py  test_permissions.py  test_registry.py  test_run_stats.py  test_smartinput.py  test_tools.py  test_tui_integration.py  test_web_search.py
