[project]
name = "friday"
version = "0.0.1"
description = "Friday is a Terminal (TUI) LLM assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "agno>=2.3.24",
  "crawl4ai>=0.7.8",
  "ddgs>=9.10.0",
  "newspaper3k>=0.2.8",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "pyperclip>=1.11.0",
  "python-dotenv>=1.2.1",
  "rich>=13.7",
  "sqlalchemy>=2.0.45",
  "textual>=0.58",
  "textual-speedups>=0.2.1",
  "typer>=0.12",
  "wikipedia>=1.4.0",
]

[project.scripts]
friday = "app.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "ty>=0.0.11",
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "taskipy>=1.12",
    "textual-dev>=1.8.0",
]

[tool.typer]
entrypoint = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
fixable = ["ALL"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.taskipy.tasks]
# Running
run = "uv run friday --help"
tui = "uv run friday tui"

# Quality
format = "ruff format ."
lint = "ruff check ."
lint_fix = "ruff check . --fix"
typecheck = "ty check app tests"
test = "pytest"

# All-in-one
check = "ruff format . && ruff check . && ty check app tests && pytest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

